@@ -31,6 +31,8 @@ This is not an exhaustive list of TODO items.
 
 * Test fcntl.
 
+* !!! We need a proper way to override exceptions from system!
+
 == 5.8 / The One True Autodie ==
 
 * Support 're-instating' original subs when we've used autodie
