@@ -37,6 +37,11 @@ Revision history for Fatal
           always existed in Fatal, and as far as I know it incurable
           (but harmless).
 
+        * FEATURE: autodie and its exceptions can now be subclassed!
+
+        * TEST: Added t/crickey.t as an example of using fair dinkum
+          subclasses of autodie.  Mate, I reckon it's time for a beer.
+
 1.10_07  Sun Jun 29 15:54:26 AEST 2008
 	* RELEASE CODENAME: "ikegami", in thanks for solving the problem
 	  of getting lexical replacement of subroutines working for real
